--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-i18n": "^8.11.2"
   },
   "devDependencies": {
+    "dotenv": "^8.0.0",
     "lodash": "^4.17.11",
     "nodemon": "^1.18.9",
     "prettier": "^1.16.4",
