--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
+    "@nuxtjs/pwa": "^3.0.0-beta.16",
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
     "nuxt-purgecss": "^0.2.1",
