--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.0-beta.16",
+    "luxon": "^1.17.2",
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
     "nuxt-purgecss": "^0.2.1",
