--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Tim Winkelmann",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "cross-env NUXT_HOST=0.0.0.0 nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "cross-env NUXT_HOST=0.0.0.0 nuxt start",
     "generate": "nuxt generate",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
@@ -21,6 +21,7 @@
     "vue-i18n": "^8.11.2"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "lodash": "^4.17.11",
     "nodemon": "^1.18.9",
