--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.0-beta.16",
     "chart.js": "^2.8.0",
+    "chartjs-adapter-luxon": "^0.2.0",
     "luxon": "^1.17.2",
     "nuxt": "^2.0.0",
     "vue-i18n": "^8.11.2"
   },
   "devDependencies": {
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
-    "nuxt-purgecss": "^0.2.1",
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "lodash": "^4.17.13",
+    "node-sass": "^4.12.0",
+    "nuxt-purgecss": "^0.2.1",
     "prettier": "^1.16.4",
     "push-dir": "^0.4.1",
+    "sass-loader": "^7.1.0",
     "tailwindcss": "^1.0.0"
   }
 }
