--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "@nuxtjs/pwa": "^3.0.0-beta.16",
-    "chart.js": "^2.8.0",
-    "chartjs-adapter-luxon": "^0.2.0",
-    "luxon": "^1.17.2",
-    "nuxt": "^2.0.0",
-    "vue-i18n": "^8.11.2"
+    "@nuxtjs/pwa": "^3.2.2",
+    "chart.js": "^2.9.4",
+    "chartjs-adapter-luxon": "^0.2.2",
+    "luxon": "^1.25.0",
+    "nuxt": "^2.14.7",
+    "vue-i18n": "^8.22.2"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
-    "lodash": "^4.17.13",
-    "node-sass": "^4.12.0",
-    "nuxt-purgecss": "^0.2.1",
-    "prettier": "^1.16.4",
+    "cross-env": "^7.0.2",
+    "lodash": "^4.17.20",
+    "node-sass": "^5.0.0",
+    "nuxt-purgecss": "^1.0.0",
+    "prettier": "2.1.2",
     "push-dir": "^0.4.1",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^10.1.0",
     "tailwindcss": "^1.0.0"
   }
 }
