--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/pwa": "^3.2.2",
     "chart.js": "^2.9.4",
     "chartjs-adapter-luxon": "^0.2.2",
+    "leaflet": "^1.7.1",
     "luxon": "^1.25.0",
     "nuxt": "^2.14.7",
     "vue-i18n": "^8.22.2"
